--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
   </head>
 
   <body>
+    <!-- Static h1 for search engines - visible in HTML source before React loads -->
+    <h1 style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip-path: inset(50%); white-space: nowrap; border: 0;">Pavlo Troph Portfolio</h1>
     <div id="root"></div>
     <noscript>
       <div style="padding: 20px; font-family: Arial, sans-serif; max-width: 800px; margin: 50px auto;">
