--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       property="og:description"
       content="Pavlo Troph is a multidisciplinary artist: Graphic Design, CGI, Photography, Cinematography, Art Direction."
     />
-    <meta
-      name="description"
-      content="Pavlo Troph is a multidisciplinary artist: Graphic Design, CGI, Photography, Cinematography, Art Direction."
-    />
+    <!-- Meta description is handled by React Helmet to avoid duplicates -->
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/Svitly4nyi-Vla2yslav/portfolio-photography/main/src/assets/icons/logo-portfolio.svg"
