--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       property="og:description"
       content="Pavlo Troph is a multidisciplinary artist: Graphic Design, CGI, Photography, Cinematography, Art Direction."
     />
-    <!-- Meta description is handled by React Helmet to avoid duplicates -->
+    <meta
+      name="description"
+      content="Pavlo Troph is a multidisciplinary artist: Graphic Design, CGI, Photography, Cinematography, Art Direction."
+    />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/Svitly4nyi-Vla2yslav/portfolio-photography/main/src/assets/icons/logo-portfolio.svg"
