--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       id="preload-access-nav"
       style="position: fixed; bottom: 0; right: 0; background: #000; color: #fff; padding: 6px 10px; font-family: Arial, sans-serif; font-size: 12px; z-index: 10001; border-top-left-radius: 6px; border: 1px solid #333; border-right: none; border-bottom: none;"
     >
-      <a href="/sitemap.html" style="color: #fff; text-decoration: underline; margin-right: 8px;">Site Map</a>
+      <a href="/sitemap.html" style="color: #fff; text-decoration: underline; margin-right: 8px;">Sitemap</a>
       <form action="https://www.google.com/search" method="get" style="display: inline;">
-        <input type="hidden" name="sitesearch" value="pavlo-protfolio.vercel.app" />
+        <input type="hidden" name="sitesearch" value="pavlo-portfoli.vercel.app" />
         <label for="fallback-site-search-input" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">
           Search this site
         </label>
