--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Map | Pavlo Troph Portfolio</title>
-    <meta name="description" content="Site Map for Pavlo Troph Portfolio - navigate to all pages including Work, Photography, About, Info, and Contact." />
+    <title>Sitemap | Pavlo Troph Portfolio</title>
+    <meta name="description" content="Sitemap for Pavlo Troph Portfolio - navigate to all pages including Work, Photography, About, Info, and Contact." />
   </head>
   <body>
-    <h1>Site Map</h1>
+    <h1>Sitemap</h1>
     <nav aria-label="Site navigation">
       <ul>
         <li><a href="/home">Home</a></li>
