--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     />
     <meta name="author" content="Pavlo Troph" />
 
+    <!-- Explicit sitemap/search discoverability for scanners -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <link rel="alternate" href="/sitemap.html" title="Sitemap" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
