--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     >
       <a href="/sitemap.html" style="color: #fff; text-decoration: underline; margin-right: 8px;">Sitemap</a>
       <form action="https://www.google.com/search" method="get" style="display: inline;">
-        <input type="hidden" name="sitesearch" value="pavlo-portfoli.vercel.app" />
+        <input type="hidden" name="sitesearch" value="pavlo-protfolio.vercel.app" />
         <label for="fallback-site-search-input" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">
           Search this site
         </label>
