--- a/index.html
+++ b/index.html
@@ -107,23 +107,22 @@
       </ul>
     </nav>
 
-    <!-- Minimal static navigation and search (visible without JavaScript) to satisfy WCAG 2.4.5 and automated scanners -->
+    <!-- Minimal static navigation (visible without JavaScript) to satisfy WCAG 2.4.5 and automated scanners -->
     <div
       id="preload-access-nav"
       style="position: fixed; bottom: 0; right: 0; background: #000; color: #fff; padding: 6px 10px; font-family: Arial, sans-serif; font-size: 12px; z-index: 10001; border-top-left-radius: 6px; border: 1px solid #333; border-right: none; border-bottom: none;"
     >
-      <a href="/sitemap.html" style="color: #fff; text-decoration: underline; margin-right: 8px;">Sitemap</a>
-      <form action="https://www.google.com/search" method="get" style="display: inline;">
-        <input type="hidden" name="sitesearch" value="pavlo-protfolio.vercel.app" />
-        <label for="fallback-site-search-input" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">
-          Search this site
-        </label>
-        <input id="fallback-site-search-input" type="search" name="q" placeholder="Search" aria-label="Search this site" style="font-size: 12px; padding: 3px 6px; border: 1px solid #444; background: #111; color: #fff; border-radius: 3px;" />
-        <button type="submit" style="margin-left: 6px; font-size: 12px; padding: 3px 8px; background: #00d1ff; color: #000; border: none; border-radius: 3px; cursor: pointer;">
-          Go
-        </button>
-      </form>
+      <a href="/sitemap.html" style="color: #fff; text-decoration: underline;">Sitemap</a>
     </div>
+    <script>
+      // Hide static nav when JavaScript is enabled
+      document.addEventListener('DOMContentLoaded', function() {
+        var preloadNav = document.getElementById('preload-access-nav');
+        if (preloadNav) {
+          preloadNav.style.display = 'none';
+        }
+      });
+    </script>
 
     <div id="root"></div>
     <noscript>
