--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h1 style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip-path: inset(50%); white-space: nowrap; border: 0;">Pavlo Troph Portfolio</h1>
 
     <!-- Minimal, JS-independent primary navigation so scanners always detect multiple ways to navigate -->
-    <nav id="preload-primary-nav" aria-label="Primary" style="background:#000;color:#fff;padding:6px 10px;font-family:Arial,sans-serif;font-size:12px;border-bottom:1px solid #333">
+    <nav id="preload-primary-nav" aria-label="Primary" style="display:none;background:#000;color:#fff;padding:6px 10px;font-family:Arial,sans-serif;font-size:12px;border-bottom:1px solid #333">
       <ul style="list-style:none;display:flex;gap:10px;margin:0;padding:0;flex-wrap:wrap">
         <li><a href="/home" style="color:#fff;text-decoration:underline">Home</a></li>
         <li><a href="/work" style="color:#fff;text-decoration:underline">Work</a></li>
@@ -110,16 +110,28 @@
     <!-- Minimal static navigation (visible without JavaScript) to satisfy WCAG 2.4.5 and automated scanners -->
     <div
       id="preload-access-nav"
-      style="position: fixed; bottom: 0; right: 0; background: #000; color: #fff; padding: 6px 10px; font-family: Arial, sans-serif; font-size: 12px; z-index: 10001; border-top-left-radius: 6px; border: 1px solid #333; border-right: none; border-bottom: none;"
+      style="display:none;position: fixed; bottom: 0; right: 0; background: #000; color: #fff; padding: 6px 10px; font-family: Arial, sans-serif; font-size: 12px; z-index: 10001; border-top-left-radius: 6px; border: 1px solid #333; border-right: none; border-bottom: none;"
     >
       <a href="/sitemap.html" style="color: #fff; text-decoration: underline;">Sitemap</a>
     </div>
     <script>
-      // Hide static nav when JavaScript is enabled
+      // Hide static nav when JavaScript is enabled (run immediately, not waiting for DOMContentLoaded)
+      (function() {
+        var preloadNav = document.getElementById('preload-access-nav');
+        if (preloadNav) {
+          preloadNav.style.display = 'none';
+        }
+      })();
+      // Also hide on DOMContentLoaded as backup
       document.addEventListener('DOMContentLoaded', function() {
         var preloadNav = document.getElementById('preload-access-nav');
         if (preloadNav) {
           preloadNav.style.display = 'none';
+        }
+        // Also hide preload-primary-nav
+        var preloadPrimaryNav = document.getElementById('preload-primary-nav');
+        if (preloadPrimaryNav) {
+          preloadPrimaryNav.style.display = 'none';
         }
       });
     </script>
