--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -21,14 +21,14 @@
           id="search-input"
           name="q"
           placeholder="Enter keywords..."
-          style="width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 1rem;"
+          style="width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 16px;"
           aria-label="Search portfolio"
         />
-        <button type="submit" style="margin-top: 10px; padding: 10px 20px; background: #333; color: #fff; border: none; border-radius: 4px; cursor: pointer; font-size: 1rem;">
+        <button type="submit" style="margin-top: 10px; padding: 10px 20px; background: #333; color: #fff; border: none; border-radius: 4px; cursor: pointer; font-size: 16px;">
           Search
         </button>
       </form>
-      <p style="font-size: 1rem; color: #666; margin-top: 10px;">
+      <p style="font-size: 16px; color: #666; margin-top: 10px;">
         Tip: You can also use the search option provided on each page.
       </p>
     </section>
